<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.ProfileActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_activity_relativelayout_height"
            android:layout_marginTop="-14dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_activity_linearlayout_height"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/profile_activity_imageView_hight"
                    android:layout_height="@dimen/profile_activity_imageview_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/profile_activity_imageview_marginTop"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/profile_photo"
                    android:src="@drawable/slyy" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/profile_activity_textview_margintop"
                    android:text="@string/student_name"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/card_marginTop"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img_twitter"
                            android:contentDescription="@string/content_description_twitter_link"
                            android:layout_width="@dimen/textView_wh"
                            android:layout_height="@dimen/textView_wh"
                            android:background="@drawable/twitter"
                            android:clickable="true" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_facebook"
                            android:contentDescription="@string/facebook_profile_link"
                            android:layout_width="@dimen/textView_wh"
                            android:layout_height="@dimen/textView_wh"
                            android:background="@drawable/facebook"
                            android:clickable="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_ytube"
                            android:layout_width="@dimen/textView_wh"
                            android:layout_height="@dimen/textView_wh"
                            android:background="@drawable/youtube"
                            android:contentDescription="@string/youtube_profile_link"
                            android:clickable="true" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:layout_width="@dimen/bigcard_width"
            android:layout_height="@dimen/bigcard_height">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profileActivity_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/profileActivity_margin"
                    android:text="@string/student_track"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profileActivity_margin"
                    android:layout_marginTop="@dimen/profile_activity_tv_margin_top"
                    android:layout_marginEnd="@dimen/profileActivity_margin"
                    android:text="@string/student_country"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profileActivity_margin"
                    android:layout_marginTop="@dimen/profile_activity_tv_margin_top"
                    android:layout_marginEnd="@dimen/profileActivity_margin"
                    android:text="@string/student_email"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/profile_activity_tv_margin_top"
                    android:layout_marginEnd="@dimen/profileActivity_margin"
                    android:text="@string/student_mobile"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/profile_activity_tv_margin_top"
                    android:layout_marginEnd="@dimen/profileActivity_margin"
                    android:text="@string/student_slack_handle"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>