<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_width="@dimen/welcome_activity_text_view_width"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_start"
        android:layout_marginTop="@dimen/welcome_activty_text_marginTop"
        android:layout_marginEnd="@dimen/activity_margin_end"
        android:text="@string/welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_btn"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="@dimen/welcome_activity_btn_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_start"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="@dimen/activity_margin_end"
        android:background="@drawable/buttonback"
        android:text="@string/about_alc"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/profile_btn"
        android:background="@drawable/buttonback"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="@dimen/welcome_activity_btn_width"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_start"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:layout_marginEnd="@dimen/activity_margin_end"
        android:text="@string/my_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_btn" />
</android.support.constraint.ConstraintLayout>